# bmrs-settlement-analytics

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.in  requirements.txt  smartest-dev-technical-exercise.md
src/energy_report/: client.py  processor.py  visualisation.py
tests/: test_client.py  test_main.py  test_processor.py
